changed formatting of side bar on the stats page to avoid grey overlapping

--- a/index.css
+++ b/index.css
@@ -206,7 +206,7 @@
   /*Sidebar when viewing all stats or my stats */
   .statsSidebarFormat {
       margin-left: 15px;
-      margin-top: 400px;
+      margin-top: 390px;
   }
 
   .right-container {
